--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
 
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Hacker.io</a>
+	      <a class="navbar-brand" href="/">Hacker.io</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -194,7 +194,7 @@
                                     </div>
                                     <div class="job-post-item-body d-block d-md-flex">
                                       <div class="mr-3"><i class="fa fa-arrow-up" aria-hidden="true"></i> <span>{{ hit['_source']['upvote'] }}</span></div>
-                                      <div><span class="icon-layers"></span><a href="#"> {{ hit['_source']['topic'] }}</a></div>
+                                      <div><span class="icon-layers"></span><a href="/"> {{ hit['_source']['topic'] }}</a></div>
                                     </div>
                                   </div>
                                   <div class="ml-auto d-flex">
@@ -305,6 +305,7 @@
             }, 2000);
             console.log("Called here")
       }
+
 
 
 
